6th commit - dropdown fix attempt on mobiles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3009,7 +3009,7 @@ input, select, textarea {
 		.dropdown-text{
 			max-height: 0;
 			overflow-y: hidden;
-			transition: 0.5s ease;
+			transition: max-height 1s ease;
 		}
 
 		.features article {
